c_yacc.output
Nonterminals useless in grammar

   scopedVarDeclaration
   statement
   expressionStmt
   compoundStmt
   localDeclarations
   statementList
   elsifList
   selectionStmt
   iterationStmt
   returnStmt
   breakStmt


Terminals unused in grammar

   '='
   '<'
   '>'
   '+'
   '-'
   '*'
   '/'
   '!'
   IF
   ELSE
   ELSEIF
   FOR
   WHILE
   BREAK
   RETURN
   SEMI
   NL
   OB
   CB


Rules useless in grammar

   73 scopedVarDeclaration: INT varDeclList_I delimiter
   74                     | CHAR varDeclList_C delimiter
   75                     | FLOAT varDeclList_F delimiter
   76                     | BOOL varDeclList_B delimiter

   77 statement: expressionStmt
   78          | compoundStmt
   79          | selectionStmt
   80          | iterationStmt
   81          | returnStmt
   82          | breakStmt

   83 expressionStmt: expression delimiter
   84               | delimiter

   85 compoundStmt: OB localDeclarations statementList CB

   86 localDeclarations: localDeclarations scopedVarDeclaration
   87                  | /* empty */

   88 statementList: statementList statement
   89              | /* empty */

   90 elsifList: elsifList ELSEIF simpleExpression statement
   91          | /* empty */

   92 selectionStmt: IF simpleExpression statement elsifList
   93              | IF simpleExpression statement elsifList ELSE statement

   94 iterationStmt: WHILE OP simpleExpression CP statement
   95              | FOR OP varDeclInitialize delimiter simpleExpression delimiter expression CP statement
   96              | FOR OP delimiter simpleExpression delimiter expression CP statement
   97              | FOR OP varDeclInitialize delimiter simpleExpression delimiter CP statement
   98              | FOR OP delimiter simpleExpression delimiter CP statement
   99              | FOR OP delimiter delimiter CP statement

  100 returnStmt: RETURN delimiter
  101           | RETURN expression delimiter

  102 breakStmt: BREAK delimiter


Grammar

    0 $accept: program $end

    1 program: declarationList

    2 declarationList: declarationList varDeclaration
    3                | varDeclaration

    4 varDeclaration: INT varDeclList_I delimiter
    5               | CHAR varDeclList_C delimiter
    6               | FLOAT varDeclList_F delimiter
    7               | BOOL varDeclList_B delimiter

    8 varDeclList_I: varDeclList_I COMMA varDeclInitialize
    9              | varDeclInitialize

   10 varDeclList_C: varDeclList_C COMMA varDeclInitialize
   11              | varDeclInitialize

   12 varDeclList_F: varDeclList_F COMMA varDeclInitialize
   13              | varDeclInitialize

   14 varDeclList_B: varDeclList_B COMMA varDeclInitialize
   15              | varDeclInitialize

   16 varDeclInitialize: ID
   17                  | ID ASSIGN simpleExpression

   18 expression: mutable ASSIGN expression
   19           | mutable SADD expression
   20           | mutable SSUB expression
   21           | mutable SMUL expression
   22           | mutable SDIV expression
   23           | mutable SMOD expression
   24           | mutable INC
   25           | mutable DEC
   26           | simpleExpression

   27 simpleExpression: simpleExpression OR andExpression
   28                 | andExpression

   29 andExpression: andExpression AND unaryRelExpression
   30              | unaryRelExpression

   31 unaryRelExpression: NOT unaryRelExpression
   32                   | relExpression

   33 relExpression: sumExpression relop sumExpression
   34              | sumExpression

   35 relop: LE
   36      | LT
   37      | GT
   38      | GE
   39      | EQ
   40      | NE

   41 sumExpression: sumExpression sumop mulExpression
   42              | mulExpression

   43 sumop: ADD
   44      | SUB

   45 mulExpression: mulExpression mulop unaryExpression
   46              | unaryExpression

   47 mulop: MUL
   48      | DIV
   49      | MOD

   50 unaryExpression: unaryop unaryExpression
   51                | factor

   52 unaryop: SUB
   53        | MUL

   54 factor: immutable
   55       | mutable

   56 mutable: ID
   57        | mutable OS expression CS

   58 immutable: OP expression CP
   59          | call
   60          | constant

   61 call: ID OP args CP

   62 args: argList
   63     | /* empty */

   64 argList: argList COMMA expression
   65        | expression

   66 constant: numconst
   67         | charconst
   68         | stringconst
   69         | 't'
   70         | 'T'
   71         | 'f'
   72         | 'F'


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'*' (42)
'+' (43)
'-' (45)
'/' (47)
'<' (60)
'=' (61)
'>' (62)
'F' (70) 72
'T' (84) 70
'f' (102) 71
't' (116) 69
error (256)
charconst (258) 67
stringconst (259) 68
SUB (260) 44 52
ADD (261) 43
MUL (262) 47 53
DIV (263) 48
MOD (264) 49
SADD (265) 19
SSUB (266) 20
SMUL (267) 21
SDIV (268) 22
SMOD (269) 23
INC (270) 24
DEC (271) 25
GT (272) 37
LT (273) 36
NE (274) 40
GE (275) 38
LE (276) 35
EQ (277) 39
ASSIGN (278) 17 18
AND (279) 29
OR (280) 27
NOT (281) 31
IF (282)
ELSE (283)
ELSEIF (284)
FOR (285)
WHILE (286)
BREAK (287)
RETURN (288)
INT (289) 4
CHAR (290) 5
FLOAT (291) 6
BOOL (292) 7
ID (293) 16 17 56 61
numconst (294) 66
delimiter (295) 4 5 6 7
SEMI (296)
COMMA (297) 8 10 12 14 64
NL (298)
OP (299) 58 61
CP (300) 58 61
OB (301)
CB (302)
OS (303) 57
CS (304) 57


Nonterminals, with rules where they appear

$accept (62)
    on left: 0
program (63)
    on left: 1, on right: 0
declarationList (64)
    on left: 2 3, on right: 1 2
varDeclaration (65)
    on left: 4 5 6 7, on right: 2 3
varDeclList_I (66)
    on left: 8 9, on right: 4 8
varDeclList_C (67)
    on left: 10 11, on right: 5 10
varDeclList_F (68)
    on left: 12 13, on right: 6 12
varDeclList_B (69)
    on left: 14 15, on right: 7 14
varDeclInitialize (70)
    on left: 16 17, on right: 8 9 10 11 12 13 14 15
expression (71)
    on left: 18 19 20 21 22 23 24 25 26, on right: 18 19 20 21 22 23
    57 58 64 65
simpleExpression (72)
    on left: 27 28, on right: 17 26 27
andExpression (73)
    on left: 29 30, on right: 27 28 29
unaryRelExpression (74)
    on left: 31 32, on right: 29 30 31
relExpression (75)
    on left: 33 34, on right: 32
relop (76)
    on left: 35 36 37 38 39 40, on right: 33
sumExpression (77)
    on left: 41 42, on right: 33 34 41
sumop (78)
    on left: 43 44, on right: 41
mulExpression (79)
    on left: 45 46, on right: 41 42 45
mulop (80)
    on left: 47 48 49, on right: 45
unaryExpression (81)
    on left: 50 51, on right: 45 46 50
unaryop (82)
    on left: 52 53, on right: 50
factor (83)
    on left: 54 55, on right: 51
mutable (84)
    on left: 56 57, on right: 18 19 20 21 22 23 24 25 55 57
immutable (85)
    on left: 58 59 60, on right: 54
call (86)
    on left: 61, on right: 59
args (87)
    on left: 62 63, on right: 61
argList (88)
    on left: 64 65, on right: 62 64
constant (89)
    on left: 66 67 68 69 70 71 72, on right: 60


state 0

    0 $accept: . program $end

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    BOOL   shift, and go to state 4

    program          go to state 5
    declarationList  go to state 6
    varDeclaration   go to state 7


state 1

    4 varDeclaration: INT . varDeclList_I delimiter

    ID  shift, and go to state 8

    varDeclList_I      go to state 9
    varDeclInitialize  go to state 10


state 2

    5 varDeclaration: CHAR . varDeclList_C delimiter

    ID  shift, and go to state 8

    varDeclList_C      go to state 11
    varDeclInitialize  go to state 12


state 3

    6 varDeclaration: FLOAT . varDeclList_F delimiter

    ID  shift, and go to state 8

    varDeclList_F      go to state 13
    varDeclInitialize  go to state 14


state 4

    7 varDeclaration: BOOL . varDeclList_B delimiter

    ID  shift, and go to state 8

    varDeclList_B      go to state 15
    varDeclInitialize  go to state 16


state 5

    0 $accept: program . $end

    $end  shift, and go to state 17


state 6

    1 program: declarationList .
    2 declarationList: declarationList . varDeclaration

    INT    shift, and go to state 1
    CHAR   shift, and go to state 2
    FLOAT  shift, and go to state 3
    BOOL   shift, and go to state 4

    $default  reduce using rule 1 (program)

    varDeclaration  go to state 18


state 7

    3 declarationList: varDeclaration .

    $default  reduce using rule 3 (declarationList)


state 8

   16 varDeclInitialize: ID .
   17                  | ID . ASSIGN simpleExpression

    ASSIGN  shift, and go to state 19

    $default  reduce using rule 16 (varDeclInitialize)


state 9

    4 varDeclaration: INT varDeclList_I . delimiter
    8 varDeclList_I: varDeclList_I . COMMA varDeclInitialize

    delimiter  shift, and go to state 20
    COMMA      shift, and go to state 21


state 10

    9 varDeclList_I: varDeclInitialize .

    $default  reduce using rule 9 (varDeclList_I)


state 11

    5 varDeclaration: CHAR varDeclList_C . delimiter
   10 varDeclList_C: varDeclList_C . COMMA varDeclInitialize

    delimiter  shift, and go to state 22
    COMMA      shift, and go to state 23


state 12

   11 varDeclList_C: varDeclInitialize .

    $default  reduce using rule 11 (varDeclList_C)


state 13

    6 varDeclaration: FLOAT varDeclList_F . delimiter
   12 varDeclList_F: varDeclList_F . COMMA varDeclInitialize

    delimiter  shift, and go to state 24
    COMMA      shift, and go to state 25


state 14

   13 varDeclList_F: varDeclInitialize .

    $default  reduce using rule 13 (varDeclList_F)


state 15

    7 varDeclaration: BOOL varDeclList_B . delimiter
   14 varDeclList_B: varDeclList_B . COMMA varDeclInitialize

    delimiter  shift, and go to state 26
    COMMA      shift, and go to state 27


state 16

   15 varDeclList_B: varDeclInitialize .

    $default  reduce using rule 15 (varDeclList_B)


state 17

    0 $accept: program $end .

    $default  accept


state 18

    2 declarationList: declarationList varDeclaration .

    $default  reduce using rule 2 (declarationList)


state 19

   17 varDeclInitialize: ID ASSIGN . simpleExpression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    simpleExpression    go to state 40
    andExpression       go to state 41
    unaryRelExpression  go to state 42
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 49
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 20

    4 varDeclaration: INT varDeclList_I delimiter .

    $default  reduce using rule 4 (varDeclaration)


state 21

    8 varDeclList_I: varDeclList_I COMMA . varDeclInitialize

    ID  shift, and go to state 8

    varDeclInitialize  go to state 53


state 22

    5 varDeclaration: CHAR varDeclList_C delimiter .

    $default  reduce using rule 5 (varDeclaration)


state 23

   10 varDeclList_C: varDeclList_C COMMA . varDeclInitialize

    ID  shift, and go to state 8

    varDeclInitialize  go to state 54


state 24

    6 varDeclaration: FLOAT varDeclList_F delimiter .

    $default  reduce using rule 6 (varDeclaration)


state 25

   12 varDeclList_F: varDeclList_F COMMA . varDeclInitialize

    ID  shift, and go to state 8

    varDeclInitialize  go to state 55


state 26

    7 varDeclaration: BOOL varDeclList_B delimiter .

    $default  reduce using rule 7 (varDeclaration)


state 27

   14 varDeclList_B: varDeclList_B COMMA . varDeclInitialize

    ID  shift, and go to state 8

    varDeclInitialize  go to state 56


state 28

   67 constant: charconst .

    $default  reduce using rule 67 (constant)


state 29

   68 constant: stringconst .

    $default  reduce using rule 68 (constant)


state 30

   52 unaryop: SUB .

    $default  reduce using rule 52 (unaryop)


state 31

   53 unaryop: MUL .

    $default  reduce using rule 53 (unaryop)


state 32

   31 unaryRelExpression: NOT . unaryRelExpression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    unaryRelExpression  go to state 57
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 49
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 33

   56 mutable: ID .
   61 call: ID . OP args CP

    OP  shift, and go to state 58

    $default  reduce using rule 56 (mutable)


state 34

   66 constant: numconst .

    $default  reduce using rule 66 (constant)


state 35

   58 immutable: OP . expression CP

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    expression          go to state 59
    simpleExpression    go to state 60
    andExpression       go to state 41
    unaryRelExpression  go to state 42
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 61
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 36

   69 constant: 't' .

    $default  reduce using rule 69 (constant)


state 37

   70 constant: 'T' .

    $default  reduce using rule 70 (constant)


state 38

   71 constant: 'f' .

    $default  reduce using rule 71 (constant)


state 39

   72 constant: 'F' .

    $default  reduce using rule 72 (constant)


state 40

   17 varDeclInitialize: ID ASSIGN simpleExpression .
   27 simpleExpression: simpleExpression . OR andExpression

    OR  shift, and go to state 62

    $default  reduce using rule 17 (varDeclInitialize)


state 41

   28 simpleExpression: andExpression .
   29 andExpression: andExpression . AND unaryRelExpression

    AND  shift, and go to state 63

    $default  reduce using rule 28 (simpleExpression)


state 42

   30 andExpression: unaryRelExpression .

    $default  reduce using rule 30 (andExpression)


state 43

   32 unaryRelExpression: relExpression .

    $default  reduce using rule 32 (unaryRelExpression)


state 44

   33 relExpression: sumExpression . relop sumExpression
   34              | sumExpression .
   41 sumExpression: sumExpression . sumop mulExpression

    SUB  shift, and go to state 64
    ADD  shift, and go to state 65
    GT   shift, and go to state 66
    LT   shift, and go to state 67
    NE   shift, and go to state 68
    GE   shift, and go to state 69
    LE   shift, and go to state 70
    EQ   shift, and go to state 71

    $default  reduce using rule 34 (relExpression)

    relop  go to state 72
    sumop  go to state 73


state 45

   42 sumExpression: mulExpression .
   45 mulExpression: mulExpression . mulop unaryExpression

    MUL  shift, and go to state 74
    DIV  shift, and go to state 75
    MOD  shift, and go to state 76

    $default  reduce using rule 42 (sumExpression)

    mulop  go to state 77


state 46

   46 mulExpression: unaryExpression .

    $default  reduce using rule 46 (mulExpression)


state 47

   50 unaryExpression: unaryop . unaryExpression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    unaryExpression  go to state 78
    unaryop          go to state 47
    factor           go to state 48
    mutable          go to state 49
    immutable        go to state 50
    call             go to state 51
    constant         go to state 52


state 48

   51 unaryExpression: factor .

    $default  reduce using rule 51 (unaryExpression)


state 49

   55 factor: mutable .
   57 mutable: mutable . OS expression CS

    OS  shift, and go to state 79

    $default  reduce using rule 55 (factor)


state 50

   54 factor: immutable .

    $default  reduce using rule 54 (factor)


state 51

   59 immutable: call .

    $default  reduce using rule 59 (immutable)


state 52

   60 immutable: constant .

    $default  reduce using rule 60 (immutable)


state 53

    8 varDeclList_I: varDeclList_I COMMA varDeclInitialize .

    $default  reduce using rule 8 (varDeclList_I)


state 54

   10 varDeclList_C: varDeclList_C COMMA varDeclInitialize .

    $default  reduce using rule 10 (varDeclList_C)


state 55

   12 varDeclList_F: varDeclList_F COMMA varDeclInitialize .

    $default  reduce using rule 12 (varDeclList_F)


state 56

   14 varDeclList_B: varDeclList_B COMMA varDeclInitialize .

    $default  reduce using rule 14 (varDeclList_B)


state 57

   31 unaryRelExpression: NOT unaryRelExpression .

    $default  reduce using rule 31 (unaryRelExpression)


state 58

   61 call: ID OP . args CP

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    $default  reduce using rule 63 (args)

    expression          go to state 80
    simpleExpression    go to state 60
    andExpression       go to state 41
    unaryRelExpression  go to state 42
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 61
    immutable           go to state 50
    call                go to state 51
    args                go to state 81
    argList             go to state 82
    constant            go to state 52


state 59

   58 immutable: OP expression . CP

    CP  shift, and go to state 83


state 60

   26 expression: simpleExpression .
   27 simpleExpression: simpleExpression . OR andExpression

    OR  shift, and go to state 62

    $default  reduce using rule 26 (expression)


state 61

   18 expression: mutable . ASSIGN expression
   19           | mutable . SADD expression
   20           | mutable . SSUB expression
   21           | mutable . SMUL expression
   22           | mutable . SDIV expression
   23           | mutable . SMOD expression
   24           | mutable . INC
   25           | mutable . DEC
   55 factor: mutable .
   57 mutable: mutable . OS expression CS

    SADD    shift, and go to state 84
    SSUB    shift, and go to state 85
    SMUL    shift, and go to state 86
    SDIV    shift, and go to state 87
    SMOD    shift, and go to state 88
    INC     shift, and go to state 89
    DEC     shift, and go to state 90
    ASSIGN  shift, and go to state 91
    OS      shift, and go to state 79

    $default  reduce using rule 55 (factor)


state 62

   27 simpleExpression: simpleExpression OR . andExpression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    andExpression       go to state 92
    unaryRelExpression  go to state 42
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 49
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 63

   29 andExpression: andExpression AND . unaryRelExpression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    unaryRelExpression  go to state 93
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 49
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 64

   44 sumop: SUB .

    $default  reduce using rule 44 (sumop)


state 65

   43 sumop: ADD .

    $default  reduce using rule 43 (sumop)


state 66

   37 relop: GT .

    $default  reduce using rule 37 (relop)


state 67

   36 relop: LT .

    $default  reduce using rule 36 (relop)


state 68

   40 relop: NE .

    $default  reduce using rule 40 (relop)


state 69

   38 relop: GE .

    $default  reduce using rule 38 (relop)


state 70

   35 relop: LE .

    $default  reduce using rule 35 (relop)


state 71

   39 relop: EQ .

    $default  reduce using rule 39 (relop)


state 72

   33 relExpression: sumExpression relop . sumExpression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    sumExpression    go to state 94
    mulExpression    go to state 45
    unaryExpression  go to state 46
    unaryop          go to state 47
    factor           go to state 48
    mutable          go to state 49
    immutable        go to state 50
    call             go to state 51
    constant         go to state 52


state 73

   41 sumExpression: sumExpression sumop . mulExpression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    mulExpression    go to state 95
    unaryExpression  go to state 46
    unaryop          go to state 47
    factor           go to state 48
    mutable          go to state 49
    immutable        go to state 50
    call             go to state 51
    constant         go to state 52


state 74

   47 mulop: MUL .

    $default  reduce using rule 47 (mulop)


state 75

   48 mulop: DIV .

    $default  reduce using rule 48 (mulop)


state 76

   49 mulop: MOD .

    $default  reduce using rule 49 (mulop)


state 77

   45 mulExpression: mulExpression mulop . unaryExpression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    unaryExpression  go to state 96
    unaryop          go to state 47
    factor           go to state 48
    mutable          go to state 49
    immutable        go to state 50
    call             go to state 51
    constant         go to state 52


state 78

   50 unaryExpression: unaryop unaryExpression .

    $default  reduce using rule 50 (unaryExpression)


state 79

   57 mutable: mutable OS . expression CS

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    expression          go to state 97
    simpleExpression    go to state 60
    andExpression       go to state 41
    unaryRelExpression  go to state 42
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 61
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 80

   65 argList: expression .

    $default  reduce using rule 65 (argList)


state 81

   61 call: ID OP args . CP

    CP  shift, and go to state 98


state 82

   62 args: argList .
   64 argList: argList . COMMA expression

    COMMA  shift, and go to state 99

    $default  reduce using rule 62 (args)


state 83

   58 immutable: OP expression CP .

    $default  reduce using rule 58 (immutable)


state 84

   19 expression: mutable SADD . expression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    expression          go to state 100
    simpleExpression    go to state 60
    andExpression       go to state 41
    unaryRelExpression  go to state 42
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 61
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 85

   20 expression: mutable SSUB . expression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    expression          go to state 101
    simpleExpression    go to state 60
    andExpression       go to state 41
    unaryRelExpression  go to state 42
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 61
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 86

   21 expression: mutable SMUL . expression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    expression          go to state 102
    simpleExpression    go to state 60
    andExpression       go to state 41
    unaryRelExpression  go to state 42
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 61
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 87

   22 expression: mutable SDIV . expression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39

    expression          go to state 103
    simpleExpression    go to state 60
    andExpression       go to state 41
    unaryRelExpression  go to state 42
    relExpression       go to state 43
    sumExpression       go to state 44
    mulExpression       go to state 45
    unaryExpression     go to state 46
    unaryop             go to state 47
    factor              go to state 48
    mutable             go to state 61
    immutable           go to state 50
    call                go to state 51
    constant            go to state 52


state 88

   23 expression: mutable SMOD . expression

    charconst    shift, and go to state 28
    stringconst  shift, and go to state 29
    SUB          shift, and go to state 30
    MUL          shift, and go to state 31
    NOT          shift, and go to state 32
    ID           shift, and go to state 33
    numconst     shift, and go to state 34
    OP           shift, and go to state 35
    't'          shift, and go to state 36
    'T'          shift, and go to state 37
    'f'          shift, and go to state 38
    'F'          shift, and go to state 39
